# stochastic-optimization

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
stochastic_optimization/: __main__.py  example_gurobi.py
stochastic_optimization/news_vendor/: main.py  news_vendor.py  optimizer.py  simulator.py
stochastic_optimization/robust_knapsack/: main.py
